test/fixtures/typecheck/fail/BadPatternMatch.kite
module BadPatternMatch

foo : Int -> Int { match { True -> 0 } }
